syntax = "proto3";
import "data-definitions.proto";

service Provider {
    rpc RegisterMap (RegisterRequest) returns (RegisterReply) {}
}

message RegisterRequest {
    FinditMap map = 1;
}

message RegisterReply {
    bool success = 1;
}